--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next": "^14.1.0",
     "next-auth": "^5.0.0-beta.4",
     "next-themes": "^0.2.1",
+    "qrcode.react": "^3.1.0",
     "query-string": "^8.2.0",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
